--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Angular Application</title>
 </head>
 <body>
+<div ng-app="app">
+  <div ng-controller="MainController">
+    <h1>{{ person.name }}</h1>
+    <h3>email: {{ person.email }}</h3>
+    <h3>phone number: {{ person.phone }}</h3>
+  </div>
+</div>
 
     <script src="js/angular.js"></script>
     <script src="js/app/app.js"></script>
